# mcpack

./: Cargo.toml  README.md
src/: cmds.rs  main.rs  modfiles.rs
src/cmds/: cmd_changelog.rs  cmd_dev.rs  cmd_edit.rs  cmd_generate_completions.rs  cmd_init.rs  cmd_self_upgrade.rs  cmd_status.rs  cmd_update.rs
src/cmds/cmd_dev/: cmd_dev_init.rs
src/modfiles/: curseforge.rs  filename.rs  webfile.rs
